<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.willshex</groupId>
	<artifactId>blogwt</artifactId>
	<packaging>war</packaging>
	<version>0v4</version>
	<name>Blogwt</name>
	<description>Blog application built with GWT on top of AppEngine</description>

	<!-- App Engine Goals -->
	<!-- mvn help:describe -Dplugin=appengine -->

	<!-- Running with Maven -->
	<!-- mvn clean install -->
	<!-- mvn appengine:devserver_start - start web server -->
	<!-- mvn gwt:run-codeserver - start gwt code server -->
	<!-- goto http://localhost:8080 -->
	<!-- mvn appengine:devserver_stop - stop web server -->

	<properties>
		<!-- GWT -->
		<gwt.version>2.8.2</gwt.version>
		<gwt.style>OBF</gwt.style>

		<!-- App Engine -->
		<appengine.version>1.9.53</appengine.version>

		<!-- Maven -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<prerequisites>
		<maven>3.2.1</maven>
	</prerequisites>

	<scm>
		<connection>scm:git:https://github.com/billy1380/blogwt.git</connection>
	</scm>
	<build>
		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>unzip</executable>
							<arguments>
								<argument>-o</argument>
								<argument>${project.build.directory}/${project.build.finalName}*war</argument>
								<argument>META-INF/*</argument>
								<argument>-d</argument>
								<argument>${project.build.directory}/${project.build.finalName}/.</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- Don't deploy gwt-dev jar to GAE -->
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<id>default-clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
					<execution>
						<id>remove-gwt-dev-jar</id>
						<phase>package</phase>
						<goals>
							<goal>clean</goal>
						</goals>
						<configuration>
							<excludeDefaultDirectories>true</excludeDefaultDirectories>
							<filesets>
								<fileset>
									<directory>${project.build.directory}/${project.build.finalName}/WEB-INF/lib</directory>
									<includes>
										<!-- <include>gwt-user*jar</include> -->
										<include>gwt-dev*jar</include>
									</includes>
								</fileset>
							</filesets>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Implementation-Build>${buildNumber}</Implementation-Build>
						</manifestEntries>
					</archive>
					<warSourceExcludes>WEB-INF/appengine-generated/**</warSourceExcludes>
					<warSourceExcludes>WEB-INF/deploy/**</warSourceExcludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>display-dependency-updates</goal>
							<goal>display-plugin-updates</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Ignore GWTTestCases when running JUnit Runner -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<includes>
						<include>**/*test.java</include>
					</includes>
					<excludes>
						<exclude>**/*GwtTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- GWT -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.version}</version>
				<configuration>
					<strict>true</strict>

					<testTimeOut>180</testTimeOut>
					<mode>htmlunit</mode>
					<!-- Switch to a suite to run tests faster -->
					<!-- <includes>**/*GwtTestSuite.java</includes> -->
					<!-- <excludes>**/*GwtTest.java</excludes> -->
					<includes>**/*GwtTest.java</includes>

					<extraJvmArgs>-Xmx3G</extraJvmArgs>
					<logLevel>INFO</logLevel>
					<style>${gwt.style}</style>

					<!-- mvn gwt:run-codeserver - won't have to use the bookmarklet -->
					<launcherDir>${project.build.directory}/${project.build.finalName}</launcherDir>

					<runTarget>/</runTarget>
					<modules>
						<module>com.willshex.blogwt.Blogwt</module>
					</modules>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- appengine:devserver_start - start web server -->
			<!-- appengine:devserver_stop - stop web server -->
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>appengine-maven-plugin</artifactId>
				<version>2.7.0</version>
				<configuration>
					<enableJarSplitting>true</enableJarSplitting>
					<enableJarClasses>false</enableJarClasses>
					<!-- Comment in the below snippet to bind to all IPs instead of just localhost -->
					<address>0.0.0.0</address>
					<port>8888</port>
					<!-- Comment in the below snippet to enable local debugging with a remove debugger 
						like those included with Eclipse or IntelliJ -->
					<jvmFlags>
						<jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag>
						<jvmFlag>-XX:+CMSClassUnloadingEnabled</jvmFlag>
						<jvmFlag>-XX:+CMSPermGenSweepingEnabled</jvmFlag>
						<jvmFlag>-Xmx3G</jvmFlag>
					</jvmFlags>
					<projectId>blogwtproject</projectId>
					<version>0v4</version>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<!-- Eclipse m2e Enhancing -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>versions-maven-plugin</artifactId>
										<versionRange>[2.2,)</versionRange>
										<goals>
											<goal>display-plugin-updates</goal>
											<goal>display-dependency-updates</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>

		<!-- GWT -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-codeserver</artifactId>
			<version>${gwt.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
		</dependency>

		<!-- elemental 2 -->
		<dependency>
			<groupId>com.google.elemental2</groupId>
			<artifactId>elemental2-dom</artifactId>
			<version>1.0.0-beta-1</version>
		</dependency>

		<dependency>
			<groupId>org.commonjava.googlecode.markdown4j</groupId>
			<artifactId>markdown4j-gwt</artifactId>
			<version>1.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.commonjava.googlecode.emoji</groupId>
			<artifactId>emoji-gwt</artifactId>
			<version>1.1</version>
		</dependency>

		<!-- Google App Engine -->
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-1.0-sdk</artifactId>
			<version>${appengine.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-testing</artifactId>
			<version>${appengine.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Other Dependencies -->

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.2.4</version>
		</dependency>
		<dependency>
			<groupId>gson-gwt</groupId>
			<artifactId>gson-gwt</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.objectify</groupId>
			<artifactId>objectify</artifactId>
			<version>5.1.5</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.objectify</groupId>
			<artifactId>objectify-gwt</artifactId>
			<version>1.2.1</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.gwtupload</groupId>
			<artifactId>gwtupload-gae</artifactId>
			<version>1.0.4-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome</artifactId>
			<version>1.5.1</version>
		</dependency>

		<dependency>
			<groupId>com.willshex</groupId>
			<artifactId>willshex-utility</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.willshex</groupId>
			<artifactId>willshex-gson</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.willshex</groupId>
			<artifactId>willshex-gson-web-service</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.willshex</groupId>
			<artifactId>willshex-gson-web-service-appengine</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.willshex</groupId>
			<artifactId>willshex-server</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.willshex</groupId>
			<artifactId>willshex-service</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
	</dependencies>
</project>
